# backend/openapi-schema.json
@@ -815,6 +815,16 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CRUDErrorBadRequestResponse"
+                }
+              }
+            }
           }
         },
         "security": [
@@ -901,6 +911,16 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/Skill"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CRUDErrorBadRequestResponse"
                 }
               }
             }
@@ -1410,6 +1430,54 @@
         "required": [
           "name",
           "systemId"
+        ]
+      },
+      "FieldError": {
+        "type": "object",
+        "properties": {
+          "field": {
+            "type": "string",
+            "description": "Form field name"
+          },
+          "message": {
+            "type": "string",
+            "description": "Form field error message"
+          }
+        },
+        "required": [
+          "field",
+          "message"
+        ]
+      },
+      "CRUDErrorBadRequestResponse": {
+        "type": "object",
+        "properties": {
+          "statusCode": {
+            "type": "number",
+            "description": "error status code"
+          },
+          "message": {
+            "type": "string",
+            "description": "error message"
+          },
+          "errors": {
+            "description": "Error messages by fields",
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FieldError"
+            }
+          },
+          "timestamp": {
+            "format": "date-time",
+            "type": "string",
+            "description": "timestamp"
+          }
+        },
+        "required": [
+          "statusCode",
+          "message",
+          "errors",
+          "timestamp"
         ]
       },
       "UpdateSkillDto": {
